# Password_Manager_V1

./: .gitignore  README.md  veryimportantfile.md
backend/: Cargo.toml
backend/src/: auth.rs  encryption.rs  endpoints.rs  endpoints_fix.rs  error.rs  lib.rs  main.rs  server_db.rs  structs.rs
frontend/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: +page.svelte
frontend/src-tauri/: tauri.conf.json
frontend/src/routes/: +error.svelte  +page.server.ts  +page.svelte  layout.css
frontend/src/routes/passwords_dashboard/: +page.server.ts  +page.svelte  AddPassword.svelte  DeleteConfirmation.svelte  ModifyPassword.svelte  PasswordsTable.svelte
frontend/src/routes/passwords_dashboard_old/: +page.server.ts  +page.svelte
frontend/src/routes/settings/: +page.svelte
