[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.10"
log = "0.4.29"
axum = "0.8.8"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
mongodb = "3.5.2"
thiserror = "2.0.18"
serde = "1.0.228"
chrono = "0.4.44"
libsodium-rs = "0.2.2"
serde_json = "1.0.149"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
dotenv = "0.15.0"

[dependencies.uuid]
version = "1.23.0"
features = [
    "v4",
]
